aws/sg.tf
#
# Default SG
#
resource "aws_default_security_group" "default" {
  region = local.tokyo_region
  vpc_id = aws_default_vpc.default.id

  egress {
    protocol         = "-1"
    from_port        = 0
    to_port          = 0
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  # NOTE: Do not manage the default SG's ingress rules with Terraform; manage them manually.
  # The reason is a secret.
  lifecycle {
    ignore_changes = [ingress]
  }
}

# See https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/ec2-instance-connect-set-up.html#ec2-instance-connect-setup-security-group
resource "aws_security_group_rule" "default_instance_connect_browser_based_client" {
  region            = local.tokyo_region
  security_group_id = aws_default_security_group.default.id
  description       = "EC2 Instance Connect Browser-based client"
  type              = "ingress"
  protocol          = "tcp"
  from_port         = 22
  to_port           = 22
  cidr_blocks       = ["3.112.23.0/29"]
}

#
# SG for the Femiwiki server
#
resource "aws_security_group" "femiwiki" {
  region      = local.tokyo_region
  name        = "internal-server"
  description = "internal server"
  vpc_id      = aws_default_vpc.default.id

  tags = {
    Name = "Femiwiki"
  }
}

resource "aws_security_group_rule" "femiwiki_ingress_http" {
  region            = local.tokyo_region
  security_group_id = aws_security_group.femiwiki.id
  description       = "http"
  type              = "ingress"
  protocol          = "tcp"
  from_port         = 80
  to_port           = 80
  cidr_blocks       = ["0.0.0.0/0"]
  ipv6_cidr_blocks  = ["::/0"]
}

resource "aws_security_group_rule" "femiwiki_ingress_https" {
  region            = local.tokyo_region
  security_group_id = aws_security_group.femiwiki.id
  description       = "https"
  type              = "ingress"
  protocol          = "tcp"
  from_port         = 443
  to_port           = 443
  cidr_blocks       = ["0.0.0.0/0"]
  ipv6_cidr_blocks  = ["::/0"]
}

resource "aws_security_group_rule" "femiwiki_egress" {
  region            = local.tokyo_region
  security_group_id = aws_security_group.femiwiki.id

  type             = "egress"
  protocol         = "-1"
  from_port        = 0
  to_port          = 0
  cidr_blocks      = ["0.0.0.0/0"]
  ipv6_cidr_blocks = ["::/0"]
}

#
# MySQL
#
resource "aws_security_group" "mysql" {
  region      = local.tokyo_region
  name        = "mysql"
  description = "MySQL"
  vpc_id      = aws_default_vpc.default.id

  tags = {
    Name = "MySQL"
  }
}

resource "aws_security_group_rule" "mysql_ingress_self" {
  region            = local.tokyo_region
  security_group_id = aws_security_group.mysql.id
  description       = "replication"
  type              = "ingress"
  protocol          = "tcp"
  from_port         = 3306
  to_port           = 3306
  self              = true
}

resource "aws_security_group_rule" "mysql_ingress_mediawiki" {
  region                   = local.tokyo_region
  security_group_id        = aws_security_group.mysql.id
  description              = "MySQL from Mediawiki"
  type                     = "ingress"
  protocol                 = "tcp"
  from_port                = 3306
  to_port                  = 3306
  source_security_group_id = aws_security_group.mediawiki.id
}

resource "aws_security_group_rule" "mysql_egress" {
  region            = local.tokyo_region
  security_group_id = aws_security_group.mysql.id

  type             = "egress"
  protocol         = "-1"
  from_port        = 0
  to_port          = 0
  cidr_blocks      = ["0.0.0.0/0"]
  ipv6_cidr_blocks = ["::/0"]
}

#
# MediaWiki
#
resource "aws_security_group" "mediawiki" {
  region      = local.tokyo_region
  name        = "mediawiki"
  description = "MediaWiki"
  vpc_id      = aws_default_vpc.default.id

  tags = {
    Name = "MediaWiki"
  }
}
